test/asm/macro-arg-recursion.err
error: Invalid character '2' after line continuation
    at macro-arg-recursion.asm::m(2) <- macro-arg-recursion.asm(6)
Assembly aborted with 1 error!
